hero 900 items gap fix

--- a/sass/sections/_hero.sass
+++ b/sass/sections/_hero.sass
@@ -43,6 +43,7 @@
         &__items
             grid-template-columns: 1fr
             max-width: 350px
+            gap: 20px
 
 @media (max-width: 800px)
     .hero
